Finished & publishing U1-L1 definitions"

--- a/index.html
+++ b/index.html
@@ -62,19 +62,7 @@
     </div>
     <div class="flipCardBack">
       <h1>Algorithm</h1>
-      <p>an algorithm is a </p>
-    </div>
-  </div>
-</div>
-<div class="flip-card">
-  <div class="flip-card-inner">
-    <div class="flipCardFront">
-      <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;">
-    </div>
-    <div class="flipCardBack">
-      <h1>Algorithm</h1>
-      <p>Architect & Engineer</p>
-      <p>We love that guy</p>
+      <p>A finite set of instructions that accomplish a specific task. <br>Every algorithm can be constructed using combinations of sequencing, selection, and iteration </p>
     </div>
   </div>
 </div>
@@ -85,7 +73,21 @@
     </div>
     <div class="flipCardBack">
       <h1>Pseudocode</h1>
-      <p></p>
+      <p>Notation that looks like a simplified programming language, it's used in the program design stage.</p>
+    </div>
+  </div>
+</div>
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flipCardFront">
+      <h1>Strong Password</h1>
+    </div>
+    <div class="flipCardBack">
+      <h1>Strong Password</h1>
+      <p>A strong password is hard to guess but easy to remember. 
+        <br>
+        Brute force hacking relies on dictionary words and easy-to-guess substitutions in PWs, like @ for the letter "a".
+      </p>
     </div>
   </div>
 </div> 
