updated to include 10/7"

--- a/index.html
+++ b/index.html
@@ -91,6 +91,39 @@
     </div>
   </div>
 </div> 
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flipCardFront">
+      <h1>Selection</h1>
+    </div>
+    <div class="flipCardBack">
+      <h1>Selection</h1>
+      <p>determines what part(s) of an algorithm are executed, based on a condition being true or false.</p>
+    </div>
+  </div>
+</div>
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flipCardFront">
+      <h1>Sequencing</h1>
+    </div>
+    <div class="flipCardBack">
+      <h1>Sequencing</h1>
+      <p>application of each step of an algorithm in the order in which the code statements are given.</p>
+    </div>
+  </div>
+</div>
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flipCardFront">
+      <h1>Iteration</h1>
+    </div>
+    <div class="flipCardBack">
+      <h1>Iteration</h1>
+      <p>is a repeating portion of an algorithm. Iteration repeats a specified number of times or until a given condition is met.</p>
+    </div>
+  </div>
+</div>
     <script src="script.js"></script>
   </body>
 </html>
