add week four and five vocab.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   background-color: black;
   color: #fadd5c;
   font-family: "Lucida Console", Monaco;
-  font-size: 20px;
+  font-size: 18px;
 }
 /* Style the back side */
 .flipCardBack {
@@ -121,6 +121,76 @@
     <div class="flipCardBack">
       <h1>Iteration</h1>
       <p>is a repeating portion of an algorithm. Iteration repeats a specified number of times or until a given condition is met.</p>
+    </div>
+  </div>
+</div>
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flipCardFront">
+      <h1>Encryption</h1>
+    </div>
+    <div class="flipCardBack">
+      <h1>Encryption</h1>
+      <p>is the process of encoding data to prevent unauthorized access.</p>
+    </div>
+  </div>
+</div>
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flipCardFront">
+      <h1>Decryption</h1>
+    </div>
+    <div class="flipCardBack">
+      <h1>Decryption</h1>
+      <p>is the process of decoding data.</p>
+    </div>
+  </div>
+</div>
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flipCardFront">
+      <h1>Brute Force Attack</h1>
+    </div>
+    <div class="flipCardBack">
+      <h1>Brute Force Attack</h1>
+      <p>is when an attacker tries many passwords or passphrases, hoping that they will eventually guess correctly. All possible passwords and passphrases are systematically checked, until the correct one is found. 
+      Or, the attacker can attempt to guess the key.</p>
+    </div>
+  </div>
+</div>
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flipCardFront">
+      <h1>Cybersecurity</h1>
+    </div>
+    <div class="flipCardBack">
+      <h1>Cybersecurity</h1>
+      <p>measures taken to protect a computer or computer system (as on the internet) against unauthorized access or attack.
+    </p>
+    </div>
+  </div>
+</div>
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flipCardFront">
+      <h1>Decidable Problem</h1>
+    </div>
+    <div class="flipCardBack">
+      <h1>Decidable Problem</h1>
+      <p>A decidable problem is a decision problem for which an algorithm can be written to produce a correct output for all inputs (e.g., “Is the number even?”).
+    </p>
+    </div>
+  </div>
+</div>
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flipCardFront">
+      <h1>Undecidable Problem</h1>
+    </div>
+    <div class="flipCardBack">
+      <h1>Undecidable Problem</h1>
+      <p>An undecidable problem is one in which no algorithm can be constructed that always leads to a correct yes-or-no answer.
+    </p>
     </div>
   </div>
 </div>
