added scalability & efficiency

--- a/index.html
+++ b/index.html
@@ -194,6 +194,30 @@
     </div>
   </div>
 </div>
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flipCardFront">
+      <h1>Scalability</h1>
+    </div>
+    <div class="flipCardBack">
+      <h1>Scalability</h1>
+      <p>Scalability is the capacity for a system to change in size and scale to meet new demands.
+    </p>
+    </div>
+  </div>
+</div>
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flipCardFront">
+      <h1>Efficiency</h1>
+    </div>
+    <div class="flipCardBack">
+      <h1>Efficiency</h1>
+      <p>Efficiency is an estimation of the amount of computational resources used by an algorithm. Efficiency is typically expressed as a function of the size of the input.
+    </p>
+    </div>
+  </div>
+</div>
     <script src="script.js"></script>
   </body>
 </html>
